--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ p {
     color: #555; /* Paragraph text color */
 }
 
-/* Experience Section CSS */
+/* Experience Section */
 #experience {
     padding: 20px;
 }
@@ -107,23 +107,36 @@ p {
 .experience-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     font-weight: bold;
 }
 
-.company, .department, .date {
-    margin-right: 10px;
+.job-title {
+    text-align: left;
+    flex: 1;
 }
 
-.team {
-    font-style: italic;
+.dates {
+    text-align: right;
+    flex: 1;
+}
+
+.company-department {
+    display: flex;
+    justify-content: space-between;
     margin-top: 5px;
+    font-style: italic;
+}
+
+.company {
+    text-align: right;
+    flex: 1;
 }
 
 .experience-details {
-    list-style: none;
-    padding-left: 0;
+    list-style: disc;
+    padding-left: 20px;
     margin-top: 10px;
+    text-align: justify;
 }
 
 .experience-details li {
