--- a/styles.css
+++ b/styles.css
@@ -151,18 +151,18 @@ p {
     color: #ffffff;
 }
 
-/* Experience Section */
-#experience {
+/* Projects Section */
+#projects {
     padding: 20px;
 }
 
-.experience-card {
+.projects-card {
     margin-bottom: 20px;
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
 }
 
-.experience-header {
+.projects-header {
     display: flex;
     justify-content: space-between;
     font-weight: bold;
@@ -191,7 +191,7 @@ p {
     color: gray;
 }
 
-.experience-details {
+.projects-details {
     list-style: disc;
     padding-left: 20px;
     margin-top: 10px;
@@ -200,19 +200,19 @@ p {
     line-height: 1.4;
 }
 
-.experience-details li {
+.projects-details li {
     margin-bottom: 5px;
 }
 
 /* Project Section */
-.project-grid {
+.projects-grid {
     display: flex;
     gap: 1.5rem;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.project-card {
+.projects-card {
     width: 45%;
     padding: 1rem;
     border: 1px solid #ddd; /* Border color */
@@ -222,22 +222,22 @@ p {
     background-color: #fff; /* Card background color */
 }
 
-.project-card:hover {
+.projects-card:hover {
     transform: translateY(-5px);
 }
 
-.project-card h3 {
+.projects-card h3 {
     margin-bottom: 0.5rem;
     font-size: 1.2rem;
     color: #333; /* Card heading color */
 }
 
-.project-card a {
+.projects-card a {
     color: #f4c2c2; /* Link color for project cards */
     text-decoration: none;
 }
 
-.project-card a:hover {
+.projects-card a:hover {
     text-decoration: underline;
     color: #f4c7f2; /* Hover link color */
 }
