--- a/styles.css
+++ b/styles.css
@@ -154,14 +154,14 @@ p {
 /* Projects Section */
 #projects {
     padding: 20px;
-    max-width: 1000px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 /* Container for side-by-side layout */
 .projects-grid {
     display: block;
-    gap: 1.5rem;
+    gap: 2rem;
 }
 
 /* Individual project cards */
@@ -173,7 +173,6 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     margin-bottom: 20px;
-    transition: none;
 }
 
 /* Header section within each card */
@@ -182,28 +181,33 @@ p {
     justify-content: space-between;
     font-weight: bold;
     margin-bottom: 10px;
-    text-align: justify;
 }
 
-.job-title, .dates {
+.job-title {
+    text-align: left;
     font-size: 1.1rem;
+}
+
+.dates {
+    text-align: right;
+    font-size: 0.9rem;
+    color: gray;
 }
 
 /* Company and department details */
 .company-department {
+    margin-top: 5px;
     font-size: 0.9em;
     font-style: italic;
     color: gray;
-    margin-bottom: 10px
-}
-
-.company, .branch {
-    display: block;
 }
 
 /* Project details */
 .projects-details {
     list-style: disc;
+    padding-left: 20px;
+    margin-top: 15px;
+    margin-bottom: 0;
     text-align: justify;
     font-size: 0.9em;
     line-height: 1.4;
