--- a/styles.css
+++ b/styles.css
@@ -163,21 +163,22 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 100%;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 2rem 0;
 }
 
 /* Individual project cards */
 .projects-card {
     width: 90%;
-    max-width: 1200px;
     padding: 2rem;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     margin-bottom: 30px;
+    max-width: 100px;
 }
 
 /* Header section within each card */
@@ -209,12 +210,10 @@ p {
 
 /* Project details */
 .projects-details {
-    list-style: disc;
-    padding-left: 25px;
-    margin-top: 20px;
     text-align: justify;
     font-size: 1em;
-    line-height: 1.6;
+    line-height: 1.5;
+    margin: 0 20px;
 }
 
 .projects-details li {
