--- a/styles.css
+++ b/styles.css
@@ -162,13 +162,13 @@ p {
 
 .projects-card {
     width: 100%;
+    max-width: 100%;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
-    max-width: none;
     text-align: justify;
 }
 
