--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,8 @@ p {
 /* Projects Section */
 #projects {
     padding: 20px;
-    width: 85%;
-    max-width: 90%;
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -166,13 +166,28 @@ p {
 }
 
 .projects-card {
-    width: 100%;
+    width: 85%;
+    max-width: 1200px;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
+}
+
+.project-details {
+    list-style: disc;
+    padding-left: 20px;
+    margin-top: 10px;
+    font-size: 0.9em;
+    line-height: 1.4;
+    text-align: justify;
+}
+
+.project-details li {
+    margin-bottom: 5px;
+    padding-left: 10px;
 }
 
 /* Header within each card */
