--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ p {
     max-width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .container {
@@ -167,7 +168,7 @@ p {
 
 .projects-card {
     width: 70%;
-    max-width: 1200px;
+    max-width: 900px;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
