--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ p {
     align-items: center;
     padding: 20px;
     width: 100%;
+    max-width: 100%;
 }
 
 .container {
@@ -166,7 +167,7 @@ p {
 }
 
 .projects-card {
-    width: 80%;
+    width: 70%;
     max-width: 900px;
     padding: 20px;
     margin-bottom: 20px;
