--- a/styles.css
+++ b/styles.css
@@ -153,11 +153,12 @@ p {
 
 /* Projects Section */
 #projects {
+    padding: 20px;
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    width: 100%;
 }
 
 .container {
@@ -166,8 +167,7 @@ p {
 }
 
 .projects-card {
-    width: 70%;
-    max-width: 900px;
+    width: 100vw;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
