Upgrade styles.css

--- a/styles.css
+++ b/styles.css
@@ -164,10 +164,11 @@ p {
     max-width: 1200px;
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 .projects-card {
-    width: 90%;
+    width: 80%;
     max-width: 800px;
     padding: 20px;
     margin-bottom: 20px;
@@ -180,28 +181,27 @@ p {
 /* Adjustments for larger screens */
 @media (min-width: 1200px) {
     .projects-card {
-        width: 85%;
+        width: 70%;
     }
 }
 
 /* Responsive adjustments for different screen sizes */
 @media (max-width: 1024px) {
     .projects-card {
-        max-width: 800px;
-        padding: 15px;
+        width: 90px;
     }
 }
 
 @media (max-width: 768px) {
     .projects-card {
-        max-width: 600px;
-        padding: 10px;
+        width: 95%;
+        padding: 15px;
     }
 }
 
 @media (max-width: 600px) {
     .projects-card {
-        width: 90%;
+        width: 100%;
         padding: 10px;
     }
 }
@@ -250,13 +250,6 @@ p {
     font-weight: normal;
     font-style: italic;
     color: gray;
-}
-
-@media (min-width: 1200px) {
-    .projects-card {
-        width: 95%;
-        max-width: none;
-    }
 }
 
 /* Card Styles */
