--- a/styles.css
+++ b/styles.css
@@ -200,8 +200,9 @@ p {
 }
 
 .project-details {
-    list-style-position: outside;
-    padding-left: 20px;
+    list-style: disc;
+    list-style-position: inside;
+    padding-left: 0;
     margin-top: 10px;
     font-size: 0.9em;
     line-height: 1.4;
