--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     font-family: 'Roboto', sans-serif; /* General font */
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     display: flex;
     flex-direction: column;
