--- a/styles.css
+++ b/styles.css
@@ -175,13 +175,14 @@ p {
 
 .projects-card {
     width: 100%;
-    max-width: 800%;
+    max-width: 1200px;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
+    box-sizing: border-box;
     margin: 0 auto;
 }
 
@@ -201,13 +202,14 @@ p {
 @media (max-width: 600px) {
     .projects-card {
         max-width: 90%;
+        padding: 10px;
     }
 }
 
 .project-details {
     list-style: disc;
     list-style-position: inside;
-    padding-left: 0;
+    padding-left: 20px;
     margin-top: 10px;
     font-size: 0.9em;
     line-height: 1.4;
@@ -215,8 +217,8 @@ p {
 }
 
 .project-details li {
-    margin-bottom: 5px;
-    padding-left: 1rem;
+    margin-bottom: 8px;
+    padding-left: 10px;
 }
 
 /* Header within each card */
@@ -242,6 +244,8 @@ p {
     text-align: left;
     margin-top: 5px;
     font-size: 0.9em;
+    color: gray;
+    font-style: italic;
 }
 
 .company, .branch {
