--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,13 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background: #c60202(20,20,20,0.8);
     color: #333333;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Project Card Hover Effect */
+.projects-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0,0,0,0.2);
 }
 
 .project-details {
