--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,19 @@ p {
     color: #ecdde7;
 }
 
+/* Skill Icon Styling */
+.skill-card .skill-icon {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+/* Font Awesome Icons */
+.skill-card i.skill-icon {
+font-size: 50px;
+color: #ecdde7;
+}
+
 /* Projects Section */
 #projects {
     padding: 20px;
