--- a/styles.css
+++ b/styles.css
@@ -286,8 +286,8 @@ color: #ecdde7;
 /* Header within each card */
 .projects-header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    font-weight: bold;
     padding-bottom: 0.5em;
 }
 
@@ -302,15 +302,15 @@ color: #ecdde7;
 
 /* Job Title and Dates */
 .job-title {
-    text-align: left;
     color: #000033;
+    font-weight: bold;
 }
 
 .dates {
-    text-align: right;
     color: #000033;
-    font-weight: normal;
     font-size: 0.9em;
+    font-weight: normal;
+    text-align: right;
 }
 
 /* Contact Links */
