--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,9 @@ color: #ecdde7;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
     padding-bottom: 0.5em;
+    text-align: left;
 }
 
 /* Company and Department Styling */
@@ -304,12 +306,14 @@ color: #ecdde7;
 .job-title {
     color: #000033;
     font-weight: bold;
+    flex: 1;
 }
 
 .dates {
     color: #000033;
     font-size: 0.9em;
     font-weight: normal;
+    min-width: 100px;
     text-align: right;
 }
 
