--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,31 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
     color: #ecdde7; /* Subtext color */
 }
 
+#particles-js {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1; /*  Make sure it sits behind your content */
+}
+
+#hero {
+    position: relative;
+    color: white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 1; /* Ensures your text appears above the particles */
+}
+
 /* Navigation Bar Style */
 header {
     position: fixed;
